<resources>
    <string name="app_name">MeetingManagerSystem</string>
    <string name="login_user_hint">Username</string>
    <string name="login_pass_hint">password</string>
    <string name="login_textlogin">登录</string>
    <string name="login_btnphone">手机登录</string>
    <string name="login_register"><u>还没有账号?立即注册</u></string>
    <string name="phonelogin_pwtext">密码登录</string>
    <string name="phonelogin_yztext">验证码登录</string>
    <string name="login_phonenumber">手机号</string>
    <string name="login_phonepassword">密码</string>
    <string name="login_phonebtn">登录</string>
    <string name="toggle_open">打开</string>
    <string name="toggle_close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_getyanzhengma">获取验证码</string>
    <string name="xxx">注册即代表同意<u>xxx</u>条款</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
</resources>
