<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBack"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_textlogin"
        android:textSize="@dimen/supersizeone"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:id="@+id/login_tv_text"
        />
    <Button
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btnphone"
        android:layout_below="@+id/login_tv_text"
        android:textColor="#ffffff"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/shape_login_btn"
        android:textSize="@dimen/buttonsize"
        android:id="@+id/login_btn_phone"
        android:onClick="loginByPhone"
        />
    <Button
        android:onClick="loginByEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="邮箱登录"
        android:textSize="@dimen/buttonsize"
        android:layout_below="@+id/login_btn_phone"
        android:layout_marginTop="30sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/shape_login_btn"
        />
    <TextView
        android:onClick="userRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_register"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp"
        android:textSize="@dimen/textsize"
        android:textColor="#ffffff"
        />
</RelativeLayout>
