<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLoginBack"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/login_phonenumber"
        android:textSize="@dimen/appbarsize"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/bigtitlesize"
        android:id="@+id/et_passloginPhone"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/login_phonepassword"
        android:textSize="@dimen/appbarsize"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/bigtitlesize"
        android:id="@+id/et_passloginPass"
        android:layout_marginTop="25dp"
        android:hint="至少6位"
        android:textColorHint="#c2acac"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码?"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/smalltitlesize"
        android:textColor="@color/selector_gray"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_phonebtn"
        android:textColor="#ffffff"
        android:id="@+id/btn_passloginButton"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_btn"
        />
</LinearLayout>
