<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLoginBack"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/login_phonenumber"
        android:textSize="@dimen/appbarsize"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/bigtitlesize"
        android:layout_marginTop="25dp"
        android:id="@+id/et_yanzLoginNum"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="验证码"
        android:textSize="@dimen/appbarsize"
        android:layout_marginTop="25dp"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/bigtitlesize"
            android:id="@+id/et_yanzLoginCode"
            android:layout_marginTop="25dp"
            android:hint="请输入短信验证码"
            android:textColorHint="#c2acac"
            android:inputType="textPassword" />
        <Button
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/login_getyanzhengma"
            />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_phonebtn"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_yanZLogin"
        android:background="@drawable/shape_login_btn"
        />
</LinearLayout>
